--- a/discussion.tex
+++ b/discussion.tex
@@ -6,7 +6,7 @@ With our semi-analytic model we try to describe the impacts of varying depth in 
 
 \item We have assumed an infinitely large survey area with an uncorrelated distribution of the depth-function. While the boundary effects arising from a finite survey footprint would have a small impact on the shape of the function $E(\theta)$\footnote{This would be due to the fact that a pointing next to a boundary has less neighbours, therefore making it more likely that a galaxy pair is in the same pointing.}, the governing factor is the shot noise of the depth-distribution. We have assumed that the probability that a neighbouring pointing is of percentile $n$ is exactly the expectation value, namely $1/10$. While this is true for an infinitely large survey with an uncorrelated distribution of the depth-function, Figure \ref{fig:all_xis} clearly shows that it is not valid for a $100\,\rm{deg}^2$ field. Whether our assumption holds true for the $450\,\rm{deg}^2$ footprint of the KV450 survey, or even the $1350\,\rm{deg}^2$ footprint of the final survey is an important question. Also, we have assumed an uncorrelated distribution of the depth-function, both in the simulations as well as in the models. While this is likely true as a rough approximation (very few pointings of the survey were taken on the same night and thus under the same weather conditions), effects like airmass, lunar phase, Galactic extinction and seasonal weather are likely to influence the depth on scales larger than one pointing.
 
-An outlook for the mitigation of finite field effects, boundaries and a correlated distribution of depth is given in Appendix \ref{sec:expand_eoftheta}. As a preliminary result we find that finite field effects are not significant for a $450\,\rm{deg}^2$ or $1000\,\rm{deg}^2$-field, if the distribution of depth is uncorrelated.
+A strategy for the mitigation of finite field effects, boundaries and a correlated distribution of depth is given in Appendix \ref{sec:expand_eoftheta}. We find that finite field effects are not significant for a $450\,\rm{deg}^2$ or $1000\,\rm{deg}^2$-field, if the distribution of depth is uncorrelated.
 
 \item In our MCMC simulations we did not account for degeneracies with other cosmological parameters
 % (apart from $\Omega_{\rm m}, \sigma_8, w_0$ and $w_a$)
@@ -19,5 +19,6 @@ We have shown that this effect can create B-modes. However, \citet{2018arXiv1810
 
 For next-generation surveys like Euclid, this effect will be significant. Although Euclid is a space-based telescope, the photometric redshift determination will still be done by ground-based telescopes and therefore suffer from the same effects. While we did not yet perform a quantitative study of this effect for Euclid, we are certain that a such a study should be conducted.
 
-As an outlook it would be interesting to perform a full MCMC simulation, including both cosmological and nuisance parameters. One might also check the most popular extensions to the standard model of cosmology, and see whether varying depth could cause a bias towards one of these models. Furthermore, the method developed in Appendix \ref{sec:expand_eoftheta} could be applied to the actual footprint of the KV450 survey to see whether finite field effects or a correlated distribution of $r$-band depth are significant.
+%As an outlook it would be interesting to perform a full MCMC simulation, including both cosmological and nuisance parameters. One might also check the most popular extensions to the standard model of cosmology, and see whether varying depth could cause a bias towards one of these models. Furthermore, the method developed in Appendix \ref{sec:expand_eoftheta} could be applied to the actual footprint of the KV450 survey to see whether finite field effects or a correlated distribution of $r$-band depth are significant.
 Additionally is interesting to note that $E(\theta)$ is the azimuthal average of the function $E(\b\theta)$, which is not isotropic. Therefore, it would be possible to observe a direction-dependent correlation function $\xi_\pm^{ij,\rm{obs}}(\b\theta)$ in future surveys. An anisotropy in the observed correlation function could be a sign for the influence of varying depth.
+\todo{Should we give an outlook?}
