--- a/model_ps.tex
+++ b/model_ps.tex
@@ -1,6 +1,6 @@
 \section{Modelling the Power Spectrum}
 \label{sec:modelling_single_lens}
-For our first analysis we will further simplify our assumptions: We imagine that all the matter between sources and observer is concentrated in a single lens plane of distance $D_{\rm d}$ from the observer. If we now distribute sources at varying distances $D_{\rm s}$, then the convergence $\kappa$ varies according to $\kappa \propto D_{\rm ds}/D_{\rm s}$. 
+For our first analysis we will further simplify our assumptions: We imagine that all the matter between sources and observer is concentrated in a single lens plane of distance $D_{\rm d}$ from the observer. If we now distribute sources at varying distances $D_{\rm s}$, then the convergence $\kappa$ varies according to $\kappa \propto D_{\rm{ds}}/D_{\rm s}$. 
 % Following \citet{1993ApJ...404..441K}, we can simulate the shear $\gamma$ from the convergence by convolution with the kernel \[
 %\mathcal{D}(\bm{\theta}) = \frac{\theta_2^2-\theta_1^2-2i\theta_1\theta_2}{\pi |\bm{\theta}|^4}\, .
 %\]
@@ -12,7 +12,7 @@ For our first analysis we will further simplify our assumptions: We imagine that
 %2002A&A...389..729S SRC
 
 \subsection{Effects on the Power Spectrum}
-Assuming that the depth, and thus the source redshift populations, vary between pointings, an observer will measure a shear-signal that is modified by a locally constant depth-function $\gammao(\b\theta)=W(\b \theta)\gamma(\b\theta)$ with $W(\bm{\theta}) = 1+w(\bm{\theta})$, where $\langle w(\bm{\theta})\rangle=0$ holds. 
+Assuming that the depth, and thus the source redshift populations, vary between pointings, an observer will measure a shear-signal that is modified by a step-like depth-function $\gammao(\b\theta)=W(\b \theta)\gamma(\b\theta)$ with $W(\bm{\theta}) = 1+w(\bm{\theta})$, where $\langle w(\bm{\theta})\rangle=0$ holds. 
 In accordance to the definition of the shear power spectrum \begin{equation}
 (2\pi)^2\delta(\b\ell-\b\ell')P(|\b\ell|) = \la \hat{\gamma}(\b\ell)\hat{\gamma}(\b\ell')\ra \, ,
 \end{equation}
