--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -80,13 +80,13 @@ Institute for Astronomy, University of Edinburgh, Royal Observatory, Blackford H
 % context (optional)
    {Cosmic shear proves to be a powerful tool to study the properties of the local Universe. The discrepancy in the parameter $S_8$ between measurements in the local Universe and the Cosmic Microwave Background motivates further investigation of yet unaccounted systematic biases. 
 % aims
-   Especially ground-based surveys are subject to a variation in depth. We want to understand and quantify the resulting effects. In particular, we check if they introduce a bias to the cosmological parameters and if they can be responsible for the occurence of $B$-Modes.
+   Especially ground-based surveys are subject to a variation in depth. We want to understand and quantify the resulting effects. In particular, we check whether they introduce a bias to the cosmological parameters and if they can be responsible for the occurence of $B$-Modes.
 % methods
    We construct a semi-analytic model to estimate the impact on the shear correlation function and analyze the implications for cosmological parameters. Furthermore we construct COSEBIs of the correlation functions to quantify the occuring B-Modes.
 % results
    For the Kilo-Degree Survey this effect introduces an error in $\xi_\pm$ of the order of a few percent on small scales, which is responsible for a $0.1\sigma$ bias in $\Omega_{\rm m}$ and $\sigma_8$. However, the parameter $S_8$ is robust against this modification. We also report the occurrence of B-Modes, although not to a significant degree.
 % conclusions (optional)
-   We conclude that the effects of varying optical depth for ground-based surveys on cosmological parameters are not yet significant, but should be accounted for in next-generation experiments.}
+   We conclude that the effects of varying depth for ground-based surveys on cosmological parameters are not yet significant, but should be accounted for in next-generation experiments.}
 
    \keywords{gravitational lensing --
                 weak lensing --
