--- a/introduction.tex
+++ b/introduction.tex
@@ -7,7 +7,7 @@ It is interesting to note that all three current major cosmic shear results repo
 
 As weak gravitational lensing measures a tiny signal over a large sample, it is extremely sensitive to anything that systematically biases the measurements, such that the error bars in current surveys arise to equal parts from statistical and systematic uncertainties \citep[compare][]{2017MNRAS.465.1454H}. With next-generation surveys like the Large Synoptic Survey Telescope and Euclid right at the doorstep, systematic effects in gravitational lensing have received an unprecedented amount of attention \citep{2018arXiv181002353A,2019arXiv190207439B,2019arXiv190109488S}. %\todo{Citations.. \citet{2017MNRAS.464.1676A} has a few...}
 
-To check for remaining systematics, a weak lensing signal can be divided into two components, the so-called E- and B-modes \citep{2002ApJ...568...20C,2002A&A...389..729S}. To leading order, B-modes can not be created by astrophysical phenomena and are thus an excellent test for remaining systematics. As \citet{2017MNRAS.465.1454H} reported the significant detection of B-modes, it was well motivated to check for possible systematics that are not yet accounted for. Note that the non-existence of B-modes does not necessarily imply that the sample is free of remaining systematics.
+To check for remaining systematics, a weak lensing signal can be divided into two components, the so-called E- and B-modes \citep{2002ApJ...568...20C,2002A&A...389..729S}. To leading order, B-modes can not be created by astrophysical phenomena and are thus an excellent test for remaining systematics. Note that the non-existence of B-modes does not necessarily imply that the sample is free of remaining systematics.
 
 One systematic effect is the variation of depth in a survey. While effects like Galactic extinction or dithering strategies do play a role in every survey, this work focuses on the effects caused by varying atmospheric conditions, that are found in ground-based surveys. To first order, this variation can be modelled by a step-like depth function which varies from pointing to pointing. In this work we assume the specifications of the Kilo-Degree Survey, namely a collection of $1\,\text{deg}^2$ square fields. 
 
