Added cosmology dependency

--- a/appendix.tex
+++ b/appendix.tex
@@ -263,3 +263,11 @@ When we now simulate random distributions of the depth-function for a $100\,\rm{
 \caption[Correction of the correlation functions for a $1000\,\rm{deg}^2$-field.] {Correction of the correlation functions for two different distributions of percentiles for a $1000\,\rm{deg}^2$-field.}
 \label{fig:1000degsqr}
 \end{figure}
+
+\subsection{Cosmology Dependency of the Results}
+\begin{figure}[h]
+\centering
+\includegraphics[width=\textwidth]{images/compare_cosmos.pdf}
+\caption{Correction to the correlation functions in varying cosmologies. Depicted here are three flat sample cosmologies, where values within the 98\% CL of the KV450 survey were sampled.}
+\label{fig:comparecosmo}
+\end{figure}
