--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -84,9 +84,9 @@ Institute for Astronomy, University of Edinburgh, Royal Observatory, Blackford H
 % methods
    We construct a semi-analytic model to estimate the impact on the shear correlation function and analyze the implications for cosmological parameters. Furthermore we construct COSEBIs of the correlation functions to quantify the occuring B-Modes.
 % results
-   For the Kilo-Degree Survey this effect introduces an error in $\xi_\pm$ of the order of a few percent on small scales, which is responsible for a $0.1\sigma$ bias in $\Omega_{\rm m}$ and $\sigma_8$. However, the parameter $S_8$ is robust against this modification. We also report the occurrence of B-Modes, although not to a significant degree.
+   For the Kilo-Degree Survey this effect introduces an error in $\xi_\pm$ of the order of a few percent on small scales, which is responsible for a $0.1\sigma$ bias in $\Omega_{\rm m}$ and $\sigma_8$. However, the parameter $S_8$ is robust against this modification. We find that the dependency of this effect on the underlying cosmology is not neglible. We also report the occurrence of B-Modes, although not to a significant degree.
 % conclusions (optional)
-   We conclude that the effects of varying depth for ground-based surveys on cosmological parameters are not yet significant, but should be accounted for in next-generation experiments.}
+   We conclude that the effects of varying depth for ground-based surveys on cosmological parameters are not yet significant, but should be accounted for in next-generation experiments. Due to the cosmology dependency, further analyses require a fast, analytic model for this effect.}
 
    \keywords{gravitational lensing --
                 weak lensing --
